--- a/ChickenTracker/nbproject/project.properties
+++ b/ChickenTracker/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -12,7 +13,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=index.jsp
+client.urlPart=main/index.jsp
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -28,15 +29,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.antlr-2.7.7.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\antlr-2.7.7.jar
+file.reference.classmate-1.3.0.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\classmate-1.3.0.jar
+file.reference.dom4j-1.6.1.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-core-5.2.16.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\hibernate-core-5.2.16.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-jpamodelgen-5.2.16.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\jpa-metamodel-generator\\hibernate-jpamodelgen-5.2.16.Final.jar
+file.reference.jandex-2.0.3.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\jandex-2.0.3.Final.jar
+file.reference.javassist-3.22.0-GA.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\javassist-3.22.0-GA.jar
+file.reference.jboss-logging-3.3.1.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\jboss-logging-3.3.1.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.classmate-1.3.0.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-5.2.16.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.jandex-2.0.3.Final.jar}:\
+    ${file.reference.javassist-3.22.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.3.1.Final.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
+    ${file.reference.hibernate-jpamodelgen-5.2.16.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
