--- a/ChickenTracker/nbproject/project.properties
+++ b/ChickenTracker/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -36,7 +42,6 @@ file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\Yan e Pe
 file.reference.hibernate-core-5.2.16.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\hibernate-core-5.2.16.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.hibernate-jpamodelgen-5.2.16.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\jpa-metamodel-generator\\hibernate-jpamodelgen-5.2.16.Final.jar
-file.reference.hibernate-release-5.2.16.Final-lib=/Users/user/Documents/Yan/hibernate-release-5.2.16.Final/lib
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\jandex-2.0.3.Final.jar
 file.reference.javassist-3.22.0-GA.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\javassist-3.22.0-GA.jar
 file.reference.jboss-logging-3.3.1.Final.jar=C:\\Users\\Yan e Pedro\\Downloads\\hibernate-release-5.2.16.Final\\lib\\required\\jboss-logging-3.3.1.Final.jar
@@ -46,7 +51,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.domain}/lib/annotations-api.jar:${j2ee.server.domain}/lib/catalina-ant.jar:${j2ee.server.domain}/lib/catalina-ha.jar:${j2ee.server.domain}/lib/catalina-storeconfig.jar:${j2ee.server.domain}/lib/catalina-tribes.jar:${j2ee.server.domain}/lib/catalina.jar:${j2ee.server.domain}/lib/ecj-4.6.3.jar:${j2ee.server.domain}/lib/el-api.jar:${j2ee.server.domain}/lib/jasper-el.jar:${j2ee.server.domain}/lib/jasper.jar:${j2ee.server.domain}/lib/jaspic-api.jar:${j2ee.server.domain}/lib/jsp-api.jar:${j2ee.server.domain}/lib/servlet-api.jar:${j2ee.server.domain}/lib/tomcat-api.jar:${j2ee.server.domain}/lib/tomcat-coyote.jar:${j2ee.server.domain}/lib/tomcat-dbcp.jar:${j2ee.server.domain}/lib/tomcat-i18n-es.jar:${j2ee.server.domain}/lib/tomcat-i18n-fr.jar:${j2ee.server.domain}/lib/tomcat-i18n-ja.jar:${j2ee.server.domain}/lib/tomcat-jdbc.jar:${j2ee.server.domain}/lib/tomcat-jni.jar:${j2ee.server.domain}/lib/tomcat-util-scan.jar:${j2ee.server.domain}/lib/tomcat-util.jar:${j2ee.server.domain}/lib/tomcat-websocket.jar:${j2ee.server.domain}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -61,8 +66,7 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.3.1.Final.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
     ${file.reference.hibernate-jpamodelgen-5.2.16.Final.jar}:\
-    ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.hibernate-release-5.2.16.Final-lib}
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
