--- a/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
+++ b/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
+        <servlet-name>executarLogin</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.executarLogin</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>PerfilServlet</servlet-name>
         <servlet-class>br.com.avicultura.chicken_tracker.Servlets.PerfilServlet</servlet-class>
     </servlet>
@@ -36,6 +40,10 @@
         <servlet-name>Funcionario</servlet-name>
         <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Funcionario</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>executarLogin</servlet-name>
+        <url-pattern>/executarLogin</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PerfilServlet</servlet-name>
         <url-pattern>/PerfilServlet</url-pattern>
