--- a/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
+++ b/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
@@ -2,43 +2,107 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>executarLogin</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.executarLogin</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Login.executarLogin</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>PerfilServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.PerfilServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Perfil.PerfilServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ProdutoServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.ProdutoServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Produto.ProdutoServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>VacinaServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.VacinaServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Vacina.VacinaServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>NegocioServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.NegocioServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Negocio.NegocioServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>EstabelecimentoServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.EstabelecimentoServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Estabelecimentos.EstabelecimentoServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LocalAvesServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.LocalAvesServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.LocalAves.LocalAvesServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>FornecimentoServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.FornecimentoServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecimento.FornecimentoServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>FornecedorServlet</servlet-name>
-        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.FornecedorServlet</servlet-class>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecedor.FornecedorServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Funcionario</servlet-name>
         <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Funcionario</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EstabelecimentoDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Estabelecimentos.EstabelecimentoDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EstabelecimentoAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Estabelecimentos.EstabelecimentoAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FornecedorDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecedor.FornecedorDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FornecedorAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecedor.FornecedorAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FornecimentoDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecimento.FornecimentoDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FornecimentoAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Fornecimento.FornecimentoAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FuncionarioDeletaServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Funcionario.FuncionarioDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FuncionarioAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Funcionario.FuncionarioAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NegocioDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Negocio.NegocioDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NegocioAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Negocio.NegocioAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PerfilDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Perfil.PerfilDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PerfilAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Perfil.PerfilAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ProdutoDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Produto.ProdutoDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ProdutoAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Produto.ProdutoAlterarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>VacinaDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Vacina.VacinaDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>VacinaAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Vacina.VacinaAlterarServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>executarLogin</servlet-name>
@@ -79,6 +143,70 @@
     <servlet-mapping>
         <servlet-name>Funcionario</servlet-name>
         <url-pattern>/Funcionario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EstabelecimentoDeleteServlet</servlet-name>
+        <url-pattern>/EstabelecimentoDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EstabelecimentoAlterarServlet</servlet-name>
+        <url-pattern>/EstabelecimentoAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FornecedorDeleteServlet</servlet-name>
+        <url-pattern>/FornecedorDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FornecedorAlterarServlet</servlet-name>
+        <url-pattern>/FornecedorAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FornecimentoDeleteServlet</servlet-name>
+        <url-pattern>/FornecimentoDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FornecimentoAlterarServlet</servlet-name>
+        <url-pattern>/FornecimentoAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FuncionarioDeletaServlet</servlet-name>
+        <url-pattern>/FuncionarioDeletaServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FuncionarioAlterarServlet</servlet-name>
+        <url-pattern>/FuncionarioAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NegocioDeleteServlet</servlet-name>
+        <url-pattern>/NegocioDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NegocioAlterarServlet</servlet-name>
+        <url-pattern>/NegocioAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PerfilDeleteServlet</servlet-name>
+        <url-pattern>/PerfilDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PerfilAlterarServlet</servlet-name>
+        <url-pattern>/PerfilAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProdutoDeleteServlet</servlet-name>
+        <url-pattern>/ProdutoDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProdutoAlterarServlet</servlet-name>
+        <url-pattern>/ProdutoAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>VacinaDeleteServlet</servlet-name>
+        <url-pattern>/VacinaDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>VacinaAlterarServlet</servlet-name>
+        <url-pattern>/VacinaAlterarServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
