--- a/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
+++ b/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
@@ -104,6 +104,14 @@
         <servlet-name>VacinaAlterarServlet</servlet-name>
         <servlet-class>br.com.avicultura.chicken_tracker.Servlets.Vacina.VacinaAlterarServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LocalAvesDeleteServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.LocalAves.LocalAvesDeleteServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LocalAvesAlterarServlet</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Servlets.LocalAves.LocalAvesAlterarServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>executarLogin</servlet-name>
         <url-pattern>/executarLogin</url-pattern>
@@ -207,6 +215,14 @@
     <servlet-mapping>
         <servlet-name>VacinaAlterarServlet</servlet-name>
         <url-pattern>/VacinaAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LocalAvesDeleteServlet</servlet-name>
+        <url-pattern>/LocalAvesDeleteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LocalAvesAlterarServlet</servlet-name>
+        <url-pattern>/LocalAvesAlterarServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
