--- a/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
+++ b/Chicken_Tracker/src/main/webapp/WEB-INF/web.xml
@@ -112,6 +112,10 @@
         <servlet-name>LocalAvesAlterarServlet</servlet-name>
         <servlet-class>br.com.avicultura.chicken_tracker.Servlets.LocalAves.LocalAvesAlterarServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ExcluirTudo</servlet-name>
+        <servlet-class>br.com.avicultura.chicken_tracker.Utils.ExcluirTudo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>executarLogin</servlet-name>
         <url-pattern>/executarLogin</url-pattern>
@@ -223,6 +227,10 @@
     <servlet-mapping>
         <servlet-name>LocalAvesAlterarServlet</servlet-name>
         <url-pattern>/LocalAvesAlterarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ExcluirTudo</servlet-name>
+        <url-pattern>/ExcluirTudo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
