--- a/Chicken_Tracker/pom.xml
+++ b/Chicken_Tracker/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-jstlel</artifactId>
             <version>1.2.3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -35,6 +36,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
