--- a/Chicken_Tracker/pom.xml
+++ b/Chicken_Tracker/pom.xml
@@ -22,12 +22,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
-            <version>7.1.2</version>
-            <type>pom</type>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.2</version>
@@ -70,7 +64,11 @@
             <artifactId>mail</artifactId>
             <version>1.4</version>
         </dependency>
-        
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
